monkeysphere (0.18-1) UNRELEASED; urgency=low

  * Fix bugs in authorized_{user_ids,keys} file permission checking.

 -- Jameson Graef Rollins <jrollins@phys.columbia.edu>  Tue, 28 Oct 2008 14:36:16 -0400

monkeysphere (0.17-1) experimental; urgency=low

  [ Jameson Graef Rollins ]  
  * Fix some bugs in, and cleanup, authorized_keys file creation in
    monkeysphere-server update-users.
  * Move to using the empty string for not adding a user-controlled
    authorized_keys file in the RAW_AUTHORIZED_KEYS variable.

 -- Daniel Kahn Gillmor <dkg@fifthhorseman.net>  Tue, 28 Oct 2008 02:04:22 -0400

monkeysphere (0.16-1) experimental; urgency=low

  [ Daniel Kahn Gillmor ]
  * replaced "#!/bin/bash" with "#!/usr/bin/env bash" for better
    portability.
  * fixed busted lockfile arrangement, where empty file was being locked
  * portability fixes in the way we use date, mktemp, hostname, su
  * stop using /usr/bin/stat, since the syntax appears to be totally
    unportable
  * require GNU getopt, and test for getopt failures (look for getopt in
    /usr/local/bin first, since that's where FreeBSD's GNU-compatible
    getopt lives.
  * monkeysphere-server diagnostics now counts problems and suggests a
    re-run after they have been resolved.
  * completed basic test suite: this can be run from the git sources or
    the tarball with: cd tests && ./basic

  [ Jameson Graef Rollins ]
  * Genericize fs location variables.
  * break out gpg.conf files into SYSCONFIGDIR, and not auto-generated at
    install.

 -- Daniel Kahn Gillmor <dkg@fifthhorseman.net>  Sun, 26 Oct 2008 03:06:18 -0400

monkeysphere (0.15-1) experimental; urgency=low

  * porting work and packaging simplification: clarifying makefiles,
    pruning dependencies, etc.
  * added tests to monkeysphere-server diagnostics
  * moved monkeysphere(5) to section 7 of the manual
  * now shipping TODO in /usr/share/doc/monkeysphere

 -- Daniel Kahn Gillmor <dkg@fifthhorseman.net>  Thu, 04 Sep 2008 19:08:40 -0400
